Removed Signature description. Fixed bugs for edge cases invoking constructor